# InformationTheory

./: .gitignore  Definitions.tex  Shannon.tex  main.tex
example/: .gitignore  CMakeLists.txt  Channel.h  ChannelNoisy.cpp  ChannelNoisy.h  Coder.h  CoderHamming.cpp  CoderHamming.h  CoderTrivial.cpp  CoderTrivial.h  Image.h  ImageLoader.h  ImageLoaderPng.cpp  ImageLoaderPng.h  ImageSerializer.h  ImageSerializerDefault.cpp  ImageSerializerDefault.h  Reporter.cpp  Reporter.h  main.cpp
